# blueberry-desktop

./: .gitignore  .gitmodules  README.md  RELEASE_NOTES.md  electron.vite.config.ts  music-server.spec  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.preview.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
resources/: auth-bg.avif
scripts/: build-server.bat  build-server.sh  dev-watch.bat
server/: .env.example  Cargo.toml  README.md  main.py  requirements.txt
server/src/: cache.rs  lyrics.rs  main.rs  routes.rs  soundcloud.rs  spotify.rs  types.rs  yandex.rs  youtube.rs
src/main/: discord.ts  index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.css  App.tsx  env.d.ts  main.tsx
src/renderer/src/api/: yandexMusic.ts
src/renderer/src/components/: AddToPlaylistMenu.css  AddToPlaylistMenu.tsx  AnimatedList.css  AnimatedList.tsx  ArtistView.css  ArtistView.tsx  AuthView.css  AuthView.tsx  CollectionView.css  CollectionView.tsx  CreatePlaylistCard.css  CreatePlaylistCard.tsx  DynamicIsland.css  DynamicIsland.tsx  HistoryView.css  HistoryView.tsx  Modal.css  Modal.tsx  MoodList.css  MoodList.tsx  NowPlayingFullscreen.css  NowPlayingFullscreen.tsx  NowPlayingPanel.css  NowPlayingPanel.tsx  PlasmaWave.css  PlasmaWave.tsx  PlaylistDetailView.css  PlaylistDetailView.tsx  RemotePlaylistDetailView.tsx  SearchView.css  SearchView.tsx  ServiceBadge.css  ServiceBadge.tsx  (+19 more)
(+25 files in other folders)
