[package]
name = "music-server"
version = "1.0.0"
description = "Blueberry Desktop sidecar service (Rust)"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
moka = { version = "0.12", features = ["future"] }
urlencoding = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
